fixed alignment

--- a/web_src/stylesheets/styles.css
+++ b/web_src/stylesheets/styles.css
@@ -67,7 +67,6 @@ h2 {
 p {
   font-size: 15px;
   margin: 0 0 20px 0;
-  margin-left: 38px;
   color: #2b2b2b;
 }
 
